--- a/src/Components/Main/Writing/Writing.css
+++ b/src/Components/Main/Writing/Writing.css
@@ -12,8 +12,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    min-width: 100%;
     height: 100%;
-    width: 100% !important;
     text-align: center;
 }
 
@@ -24,17 +24,14 @@
     text-align: center;
     color: white;
     width: 100%;
-    /* ✅ Bu kritik */
-}
-
-.swiper-wrapper {
-    align-items: center;
-    text-align: center;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 /* Responsive */
 @media screen and (max-width:1024px) {
-    .mySwiper {
-        width: 100%;
+    .mySwiper2 h5 {
+        font-size: 24px;
+        /* Mobilde biraz küçültelim */
     }
 }
